Создал папку "CSS" с файлом "main.css" + внес изменения в файл "index.html"
В коде html добавил заголовок h2.
В CSS, в файле main.css прописал селектор для h1: расположил текст по центру и изменил цвет шрифта на красный.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Первый проект в рамках обучения на HTML-academy" />
 	<meta name="keywords" content="Как научиться делать сайты, как стать фронтенд-разработчиком, мой первый сайт, новая профессия" />
+	<link rel="stylesheet" type="html/text" href="css/main.css" />
 </head>
 <body>
-  <h1>Первое занятие на HTML-academy</h1>
+	<h1>Подготовка к обучению в HTML-Academy</h1>
+	<h2>Самостоятельное изучение гит и гитхаб и текстовых редакторов VS Code и Atom</h2>
 </body>
 </html>
