Внес исправление в команду для подключения стилей
Изменил значение атрибута  type на верное: text/css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Первый проект в рамках обучения на HTML-academy" />
 	<meta name="keywords" content="Как научиться делать сайты, как стать фронтенд-разработчиком, мой первый сайт, новая профессия" />
-	<link rel="stylesheet" type="html/text" href="css/main.css" />
+	<link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
 	<h1>Подготовка к обучению в HTML-Academy</h1>
